add created and updated field
