# swagger/swagger.json
@@ -15,15 +15,6 @@
     },
     "basePath": "/v1",
     "paths": {
-<<<<<<< HEAD
-        "/articles/": {
-            "get": {
-                "tags": [
-                    "articles"
-                ],
-                "description": "get Articles",
-                "operationId": "ArticlesController.Get All",
-=======
         "/users/": {
             "get": {
                 "tags": [
@@ -31,7 +22,6 @@
                 ],
                 "description": "get Users",
                 "operationId": "UsersController.Get All",
->>>>>>> c04e9a01b644836197e1df2c80f47c95f2c65430
                 "parameters": [
                     {
                         "in": "query",
@@ -73,11 +63,7 @@
                 "responses": {
                     "200": {
                         "schema": {
-<<<<<<< HEAD
-                            "$ref": "#/definitions/models.Articles"
-=======
                             "$ref": "#/definitions/models.Users"
->>>>>>> c04e9a01b644836197e1df2c80f47c95f2c65430
                         }
                     },
                     "403": {}
@@ -85,42 +71,24 @@
             },
             "post": {
                 "tags": [
-<<<<<<< HEAD
-                    "articles"
-                ],
-                "description": "create Articles",
-                "operationId": "ArticlesController.Post",
-=======
                     "users"
                 ],
                 "description": "create Users",
                 "operationId": "UsersController.Post",
->>>>>>> c04e9a01b644836197e1df2c80f47c95f2c65430
                 "parameters": [
                     {
                         "in": "body",
                         "name": "body",
-<<<<<<< HEAD
-                        "description": "body for Articles content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Articles"
-=======
                         "description": "body for Users content",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.Users"
->>>>>>> c04e9a01b644836197e1df2c80f47c95f2c65430
                         }
                     }
                 ],
                 "responses": {
                     "201": {
-<<<<<<< HEAD
-                        "description": "{int} models.Articles"
-=======
                         "description": "{int} models.Users"
->>>>>>> c04e9a01b644836197e1df2c80f47c95f2c65430
                     },
                     "403": {
                         "description": "body is empty"
@@ -128,15 +96,6 @@
                 }
             }
         },
-<<<<<<< HEAD
-        "/articles/{id}": {
-            "get": {
-                "tags": [
-                    "articles"
-                ],
-                "description": "get Articles by id",
-                "operationId": "ArticlesController.Get One",
-=======
         "/users/{id}": {
             "get": {
                 "tags": [
@@ -144,7 +103,6 @@
                 ],
                 "description": "get Users by id",
                 "operationId": "UsersController.Get One",
->>>>>>> c04e9a01b644836197e1df2c80f47c95f2c65430
                 "parameters": [
                     {
                         "in": "path",
@@ -157,11 +115,7 @@
                 "responses": {
                     "200": {
                         "schema": {
-<<<<<<< HEAD
-                            "$ref": "#/definitions/models.Articles"
-=======
                             "$ref": "#/definitions/models.Users"
->>>>>>> c04e9a01b644836197e1df2c80f47c95f2c65430
                         }
                     },
                     "403": {
@@ -171,17 +125,10 @@
             },
             "put": {
                 "tags": [
-<<<<<<< HEAD
-                    "articles"
-                ],
-                "description": "update the Articles",
-                "operationId": "ArticlesController.Put",
-=======
                     "users"
                 ],
                 "description": "update the Users",
                 "operationId": "UsersController.Put",
->>>>>>> c04e9a01b644836197e1df2c80f47c95f2c65430
                 "parameters": [
                     {
                         "in": "path",
@@ -193,28 +140,17 @@
                     {
                         "in": "body",
                         "name": "body",
-<<<<<<< HEAD
-                        "description": "body for Articles content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Articles"
-=======
                         "description": "body for Users content",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/models.Users"
->>>>>>> c04e9a01b644836197e1df2c80f47c95f2c65430
                         }
                     }
                 ],
                 "responses": {
                     "200": {
                         "schema": {
-<<<<<<< HEAD
-                            "$ref": "#/definitions/models.Articles"
-=======
                             "$ref": "#/definitions/models.Users"
->>>>>>> c04e9a01b644836197e1df2c80f47c95f2c65430
                         }
                     },
                     "403": {
@@ -224,17 +160,10 @@
             },
             "delete": {
                 "tags": [
-<<<<<<< HEAD
-                    "articles"
-                ],
-                "description": "delete the Articles",
-                "operationId": "ArticlesController.Delete",
-=======
                     "users"
                 ],
                 "description": "delete the Users",
                 "operationId": "UsersController.Delete",
->>>>>>> c04e9a01b644836197e1df2c80f47c95f2c65430
                 "parameters": [
                     {
                         "in": "path",
@@ -256,30 +185,16 @@
         }
     },
     "definitions": {
-<<<<<<< HEAD
-        "models.Articles": {
-            "title": "Articles",
-            "type": "object",
-            "properties": {
-                "Author": {
-                    "type": "string"
-                },
-                "Category": {
-                    "type": "string"
-                },
-                "Content": {
-                    "type": "string"
-                },
-                "CreatedAt": {
-                    "type": "string",
-                    "format": "string"
-=======
         "models.Users": {
             "title": "Users",
             "type": "object",
             "properties": {
                 "AvatarUrl": {
                     "type": "string"
+                },
+                "CreatedAt": {
+                    "type": "string",
+                    "format": "string"
                 },
                 "Dream": {
                     "type": "string"
@@ -289,20 +204,11 @@
                 },
                 "Hobby": {
                     "type": "string"
->>>>>>> c04e9a01b644836197e1df2c80f47c95f2c65430
                 },
                 "Id": {
                     "type": "integer",
                     "format": "int64"
                 },
-<<<<<<< HEAD
-                "Title": {
-                    "type": "string"
-                },
-                "UpdatedAt": {
-                    "type": "string",
-                    "format": "string"
-=======
                 "Name": {
                     "type": "string"
                 },
@@ -315,22 +221,23 @@
                 "Profession": {
                     "type": "string"
                 },
+                "Token": {
+                    "type": "string"
+                },
+                "UpdatedAt": {
+                    "type": "string",
+                    "format": "string"
+                },
                 "WebsiteUrl": {
                     "type": "string"
->>>>>>> c04e9a01b644836197e1df2c80f47c95f2c65430
                 }
             }
         }
     },
     "tags": [
         {
-<<<<<<< HEAD
-            "name": "articles",
-            "description": "ArticlesController operations for Articles\n"
-=======
             "name": "users",
             "description": "UsersController operations for Users\n"
->>>>>>> c04e9a01b644836197e1df2c80f47c95f2c65430
         }
     ]
 }
